@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d8638398167210c922e4217b37aa8d50fc70b78d ChangeLog
+SHA1 c9fc2425782f26eeedc4cb60b713c473665beec5 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 7f70dfc33a89baeca5ca605d1cb3c6b459655083 META.yml
-SHA1 bc0b5a7cdfa0f0903e5c478a78250811d1e670d0 Makefile.PL
+SHA1 868a688510899dc22a6397b1a0d5cc8b0f560f36 META.yml
+SHA1 02a2f917eafd8af02b45e26be45504a0dd4ad780 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 1a82e9f1eb270bb77e3349f83cf2bcea32b30102 bin/fullauto.pl
+SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
 SHA1 967864161cdddec872e6ea5fc18c37776cb1641a bin/install_mozrepl_plugin.exe
 SHA1 a0d5dfdc1172c70fe1760e351024287e23eea486 inc/Module/AutoInstall.pm
 SHA1 61da5f5b15bb5e3ed01095d3b826a606513c4418 inc/Module/Install.pm
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 28dd1fc382dfce9e14d749fcd252a3125b659a74 lib/Net/FullAuto.pm
+SHA1 eb8d78832b7ca6c1764712da90d0c31bc31599ce lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -58,17 +58,17 @@ SHA1 680c63d1c164c10ec6f4496f37ca9068fd53ef68 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 60e3a5d57225134e18d71fd252ea960c9ca6f2ae lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 863e8ae080491966fa2acf721aca8a8b000dc602 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 869e7d880f93f30099e65ddd3fece0b11b5c5f40 lib/Net/FullAuto/FA_Core.pm
+SHA1 7ac3268077b05db28f5d23a1a4166a83241dc1a6 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTjHZeAAoJEBa/9Pad787EGpAIALS3I6yBj4Hj8Ss3+/28NDqj
-7SvKcn67QW8227b9HaMh180c2jE4qlCeoKSRTbFxmDrke6QqeUa7pRAd3c69Alp4
-+N+baVgxG1yNIq8bzIjq2ryoqoX9cip0VitajSaUex5KUnzrm93XrhV5LVtv6tun
-PjpAUtk2un7YSyNqE+dTrJBimEhDBzjXfnbWd3ZPaMnCPs6qG1XZ/NRCE8bMF6Fc
-iVnjjLA6QhS3aDxat3mNSgxeJ8CRTVb4QD66L3fDuuWCm4RYiXEbzPvZKyfi5/lf
-nrHO0C7bgGkwrXW/f3WyAL3OD/djpUFxAqozyvz0KTLu7D8w8KSormyKztPTQig=
-=ANib
+iQEcBAEBAgAGBQJTl1nRAAoJEBa/9Pad787ErpIH/3S+0V1VKDaarbCYCxMdZjNd
+M7BmUJ+dbqvE4mvT7O0HVpqoT3e6huVWIXv0u4PaqaR5ye0WX5xfaETf3/BrJe8T
+1tdXM9ibqIk2EHXYozcMRruJLgiAKXGZtfKws6Fo894Lfi9+1OQtieaif8cKtc41
+JW+x0188HyPvDQmqtK/JjGX6F7+CUT6vj/tS5yxj5AqeJDAvzryZTzS2+kLrpIqY
+nnkdNlVnnE4hF4YpoNhSFURK+qfDdRc3HlJbc1TpZRNtozcj8uakljdcty3pEFPr
+Udk0mnlg5gODjEMBuV07q47P9k6G58BF48UnyDm7r1iW/UofYzyc8k9NVNio+2U=
+=UXfW
 -----END PGP SIGNATURE-----
